# code-for-reuse

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  expander.py  guard_setter.py  main.cpp
examples/: cht_kalila_dimna.cpp  cht_with_bigint.cpp  fenwick_monotonous_max_lis.cpp  fenwick_rsq.cpp  fenwick_stars.cpp  segment_tree_psrc.cpp  segment_tree_rars.cpp  segment_tree_rsq.cpp  totient_tree_dp_from_kazakhstan.cpp
lib/: bits.hpp  setup.hpp
lib/bigint/: bigint.hpp
lib/data_structures/: cht.hpp  compressor.hpp  dsu.hpp  fenwick.hpp  link_cut.hpp  resettable_array.hpp  splay.hpp
lib/data_structures/scheme/: top_down_segment_tree.hpp
lib/data_structures/scheme/concepts/: action.hpp  monoid.hpp  scheme.hpp
lib/data_structures/scheme/helpers/: segment_tree_iterator.hpp
lib/functional/: container_as_function.hpp
lib/geometry/: half_plane_intersection.hpp  pair_operators.hpp  polygons.hpp
lib/io/: blazingio.hpp  clock.hpp  debug.hpp  file.hpp  io.hpp  pair_io.hpp  stopwatch.hpp  vector_io.hpp
lib/modular_arithmetics/: factorials.hpp  kapt_inverter.hpp  modular.hpp  totient_chain.hpp
lib/number_theory/: discrete_log.hpp  discrete_sqrt.hpp  factorize.hpp  is_prime.hpp  mexp.hpp  modular_exp.hpp  phi.hpp  phi_sieve.hpp  primary_root.hpp  primary_root_sieve.hpp  sieve.hpp  structs.hpp  utility.hpp
lib/strings/: multihash.hpp  suffix_array.hpp
lib/utility/: radix_sort.hpp
utils/: utils.py
